# Blockchain-Based-Airline-Ticketing

./: .env  .gitignore  README.md  app.py  company_id.txt  package-lock.json  package.json  ticketgiver.py  user_id.txt
blockchain-backend/: Cargo.toml
blockchain-backend/src/: main.rs
src/: App.vue  main.ts
