[package]
name = "blockchain_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
